# 3D-Graphics-and-Animation-Coursework-2018

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist  README.md  makefile
3D Graphics and Animation Coursework.xcodeproj/: project.pbxproj
3D Graphics and Animation Coursework.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Art/Models/: bulb.blend  wire.blend
BuildTools/Mac/: IconBuilder
OPENGL/: GLapp.cpp  GLapp.h  GLdebuggers.cpp  ObjParser.cpp  ObjParser.h  camera.cpp  camera.hpp  init.cpp  main.cpp  modelObject.cpp  modelObject.h  modelObjectInst.cpp  modelObjectInst.h  modelObjectSingle.cpp  modelObjectSingle.h  readShader.cpp  render.cpp  renderer.hpp  update.cpp
OPENGL/Controllers/: controller.cpp  controller.hpp  keyboardAndMouse.cpp  keyboardAndMouse.hpp
OPENGL/GameObject/: GameObject.cpp  GameObject.hpp
OPENGL/Interfaces/: controller.cpp  controller.hpp  sceneGraph.cpp  sceneGraph.hpp
OPENGL/Material/: Material.hpp
OPENGL/Mesh/: Mesh.hpp
OPENGL/ModelObjects/: modelObject.cpp  modelObject.h  modelObjectInst.cpp  modelObjectSingle.cpp  modelObjectSingle.h
OPENGL/Resources/: Torch1.mtl  beam.mtl  front.mtl  fs.glsl  fs.txt  fs_display.glsl  fs_light.glsl  lamp.mtl  newTorch.blend  newTorch.blend1  plank.mtl  roof.mtl  room.blend  room.blend1  room.mtl  room2.blend  room2.blend1  room2.mtl  table.blend  vs.glsl  vs.txt  vs_light.glsl
OPENGL/Resources/room/: bulb.mtl  front.mtl  wall.mtl
OPENGL/Scenes/: scene1.cpp  scene1.hpp  sceneGraph.cpp  sceneGraph.hpp
OPENGL/Shaders/: FragShader.hpp  ShaderPipeline.hpp  fs.glsl  fs_display.glsl  vs.glsl
OPENGL/Shaders/Objects/: FragShader.cpp  FragShader.hpp  ShaderPipeline.cpp  VertexShader.cpp  VertexShader.hpp
OPENGL/Shaders/Shaders/: vs_light.glsl
OPENGL/Singletons/: shaderLoader.cpp  shaderLoader.hpp
OPENGL/Texture/: Texture.hpp
OPENGL/Views/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp
OPENGLClassTest.xcodeproj/: project.pbxproj
OPENGLClassTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Resources/Materials/: floor.mtl  newTorch.mtl  table.mtl
Resources/Resources/: back.mtl  wire.mtl
Resources/Set/: back.json  backMesh.json  beam.json  beamMesh.json  bulb.json  bulbMesh.json  floor.json  floorMesh.json  front.json  frontMesh.json  lamp.json  lampMesh.json  newTorchMesh.json  plank.json  plankMesh.json  roof.json  roofMesh.json  room.json  table.json  tableMesh.json  torch.json  wall.json  wallMesh.json  wire.json  wireMesh.json
Resources/Shaders/: dfrag.glsl  dvert.glsl  fs.glsl  fs_display.glsl  fs_dissolve.glsl  fs_light.glsl  fs_normal.glsl  fs_outline.glsl  vs.glsl  vs_display.glsl  vs_light.glsl  vs_normal.glsl  vs_outline.glsl
Resources/Textures/: NormalMap.ktx  perlin512.ktx
src/: GameObjectRenderPass.h  OpenGLCallbacks.cpp  OpenGLCallbacks.h  OpenGLSetup.cpp  OpenGLSetup.h  RenderPass.cpp  RenderPass.h  Transform.cpp  Transform.h  Workshop.cpp  Workshop.h  main.cpp
src/Controllers/: Controller.cpp  Controller.hpp  KeyboardAndMouse.cpp  KeyboardAndMouse.hpp  controller.cpp  controller.hpp  keyboardAndMouse.cpp  keyboardAndMouse.hpp
src/Core/: EnumBitmask.h  Imgui.cpp  WindowEvent.h
src/Core/Application/: Application.h  Window.h
src/Core/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
src/Core/OpenGL/: GlWindow.cpp  GlWindow.h
src/FSM/: FSM.cpp  FSM.h  Flowstate.cpp  Flowstate.h
src/Framebuffer/: FramebufferBase.cpp  FramebufferBase.h  ImGuiFramebuffer.cpp  ImGuiFramebuffer.h  SinglePassFramebuffer.cpp  TwoPassFramebuffer.h
src/GameObject/: GameObject.cpp  GameObject.hpp  Transform.cpp  Transform.h
src/Lights/: Lights.cpp  Lights.hpp
src/Material/: Material.cpp  Material.hpp  MaterialResource.cpp  MaterialResource.h
src/Mesh/: Mesh.cpp  Mesh.h  Mesh.hpp  MeshResource.cpp  MeshResource.hpp
src/ModelObjects/: modelObject.cpp  modelObject.h  modelObjectInst.cpp  modelObjectInst.h
src/OpenGL/: OpenGLCallbacks.cpp  OpenGLCallbacks.h  OpenGLSetup.cpp  OpenGLSetup.h
src/Profiling/: MemoryProfiler.cpp  MemoryProfiler.h  ProfileTag.h  ProfilerService.cpp  ProfilerWindow.cpp  ProfilerWindow.h
src/Rendering/: RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.hpp
src/Rendering/Framebuffer/: ImGuiFramebuffer.cpp  SinglePassFramebuffer.h  TwoPassFramebuffer.cpp
src/Rendering/ImGui/: ImGuiStyle.h  ShaderEditorWindow.cpp  ShaderEditorWindow.h  imgui_impl_glm.h
src/Rendering/Lights/: Lights.hpp
src/Rendering/Material/: Material.hpp  MaterialResource.cpp  MaterialResource.h
src/Rendering/Mesh/: Mesh.cpp  Mesh.h  MeshResource.cpp  MeshResource.hpp
src/Rendering/RenderCommands/: GLRenderCommandProcessor.cpp  GLRenderCommandProcessor.h  RenderCommand.cpp  RenderCommand.h  RenderCommandProcessor.cpp  RenderCommandProcessor.h  RenderCommands.h
src/Rendering/Shaders/: ShaderManager.cpp  ShaderUtils.cpp  ShaderUtils.h
src/Rendering/Texture/: Texture.hpp  (+2 more)
src/ResourceManager/: MeshManager.cpp  MeshManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceService.hpp  SparseVector.cpp  SparseVector.h
src/Scenes/: Scene1.cpp  Scene1.hpp  SceneGraph.cpp  SceneGraph.hpp  scene1.cpp  scene1.hpp  sceneGraph.cpp  sceneGraph.hpp
src/Shaders/: FragShader.cpp  FragShader.hpp  ShaderManager.cpp  ShaderManager.h  ShaderPipeline.cpp  ShaderPipeline.hpp  ShaderUtils.cpp  ShaderUtils.h  VertexShader.cpp  VertexShader.hpp  shaderLoader.cpp  shaderLoader.hpp
src/Texture/: Texture.cpp  Texture.hpp  TextureResource.cpp  TextureResource.h
src/Utils/: DebugUtils.h  LogUtils.h  MathUtils.cpp  MathUtils.hpp  Profile.cpp  Profile.h  ProfileData.cpp  ProfileService.h  ProfileTag.cpp  ProfileTag.h  ProfilerService.cpp  ProfilerService.h  ShaderEditor.cpp  ShaderEditor.h  VectorUtils.cpp  VectorUtils.hpp
src/Views/: Buffers.cpp  Buffers.h  Camera.cpp  FrameBuffer.cpp  FrameBuffer.h  Render.cpp  Render.hpp  RenderPass.h  RenderTask.cpp  RenderTask.h  RenderTaskManager.cpp  RenderTaskManager.h  RenderTaskResource.cpp  RenderTaskResource.h  Renderer.cpp  camera.cpp  camera.hpp  renderer.cpp  renderer.hpp
(+37 files in other folders)
